<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/LevelTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="50sp" />

        <ImageView
            android:id="@+id/LevelCompleted"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/level_completed" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/Coins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/CoinsImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/coins"
            android:contentDescription="@string/coins_image" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Emoticons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="30dp" >
    </LinearLayout>


    <LinearLayout
        
        android:paddingTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/Solution"
            android:layout_width="match_parent"
            android:layout_height="33sp"
            android:background="@drawable/button_verifica"
            android:gravity="center"
            android:hint="@string/hint"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <Button
                android:id="@+id/prevButton"
                style="@android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/prev" />

            <Button
                android:id="@+id/VerifyButton"
                style="@android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="start"
                android:background="@android:color/transparent"
                android:text="@string/verifyButton"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/nextButton"
                style="@android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/next" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <Button
            android:id="@+id/hintButton1"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" />

        <Button
            android:id="@+id/hintButton2"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />
    </RelativeLayout>

</LinearLayout>